--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-opencv-python-headless
-mediapipe==0.10.9
+streamlit==1.31.0
+opencv-python-headless==4.9.0.80
+mediapipe==0.10.7
 numpy
 pandas
 matplotlib
 reportlab
-
